--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-GROQ_API_KEY = 
-GOOGLE_API_KEY  = 
-GOOGLE_CX = 
+GROQ_API_KEY = Your_GROQ_API_KEY
+GOOGLE_API_KEY  = Your_GOOGLE_API_KEY
+GOOGLE_CX = Your_GOOGLE_CX_API_KEY
